Fixed the terrain export and billboard bugs. Also updated the gitignore to not include GeneratedFiles folder or generated resource files.

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ uninstallVisionSDK.exe
 git_*.bat
 _viminfo
 .gitconfig
+*.deploy
+GeneratedFiles/
+*.res
 
 # Don't include any SSH related information
 /.ssh/*
